--- a/pkg/Mercator/TODO
+++ b/pkg/Mercator/TODO
@@ -1,25 +1,42 @@
 1. Decide if we want to add any more binary distance measures from the
-Choi paper.
+   Choi paper.
 
 2. Fix bug in igraph with assuming mds view exists.
-(NOT SURE WHAT THIS MEANS)
+   (NOT SURE WHAT THIS MEANS)
 
-4. Finish vignette. - COMPLETE EXCEPT recolor and remapColors (CEC; 2019-07-17. 1PM)
+3. Fix bug in heatmap where heat does not produce a heatmap. HACKED:
+   Removed this from the documentaiotn. Mainly because I'm no longer sure
+   what the default behavior of a heatmap shoudl be for a distance matrix
 
-5. Fix bug in heatmap where heat does not produce a heatmap. HACKED:
-Removed this formt he documentaiotn. Mainly because I'm no longer sure
-what the deafulty behgavior of a heatm,ap shoudl be for a distance matrix
+4. Check the example RMD scripts in inst/Examples for correctness.
 
-6. CHeck the example RMD scripts in inst/Examples for correctness.
+5. Add a "plot" method for Mercator objects that would look like
+   plot(myObject, view = c("tsne", "mds"))
+   What should we use as the default 'view'?
 
-7. Possibly change name of "recolor" to "setClusters".
+6. Implement the option to add new visualization instead of
+   overwriting.
 
-8. Add a "plot" method for Mercator objects that would look like
-   plot(myObject, which = c("tsne", "mds"))
+7. Figure out why accessing the list of views by name makes accessing
+   by integer not work properly.
 
-9. Impemenmt the option to add new visualization instead oif
-overwriting.
+8. Fix bug in count of redundant features.
 
-10 Figure out why accessing the list of views by name makes accessing
-by integer not work propoerly.
+9. Should the Mercator constructor take a list of visualizations to
+   create at start-up for an object?
 
+10. Shouold there be a function to compute the relative frequencies?
+    (See pipeline report 305.)
+
+11. Should the code to make the DT or ztable stuff be part of the
+    package? What about the part trying to interpret features and
+    samples, especially the final heatmap?
+
+12. Should the smoothed scatter plots be part of the package?
+
+13. Should the SOM plots be part of the package? note that these
+    depend on the actual data matrix, not just the distance matrixc.
+
+14. Make another Mercator constructor, this time for continuous
+    data. All distance matrices from 'dist' or 'sdidtanceMatrix'
+    should be usable.
