Added "jitter" to plot routine to work around a bug in igraph.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/thresher@149 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/Mercator/NEWS
+++ b/pkg/Mercator/NEWS
@@ -8,6 +8,14 @@
 
 		CHANGES IN R VERSION 0.9.1
 
+NEW FEATURES
+
+    o	Added a new "plot" method for the Meractor class, which
+        automatically sets the colors and symbols for different
+        views.
+
+		CHANGES IN R VERSION 0.9.1
+
 BUG FIXES
 
     o	Fixed the bug in overcounting "redundant" or "unused" features.
