Updated scripts, tests, vignettes to use new "plot" method.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/thresher@150 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/Mercator/vignettes/mercator.Rmd
+++ b/pkg/Mercator/vignettes/mercator.Rmd
@@ -216,10 +216,10 @@ Mercator allows us to implement common, standard visualizations
 such as hierarchical clustering...
 ```{r jacc-hclust}
 names(jacc.Vis@view)
-plot(jacc.Vis@view[["hclust"]], col="black", pch=jacc.Vis@symv)
+plot(jacc.Vis, view = "hclust")
 ```
 
-<tt>Mercator</tt> can used tot-Stochastic Neighbor Embedding 
+<tt>Mercator</tt> can used t-distributed Stochastic Neighbor Embedding 
 (t-SNE) plots for visualizing large-scale, high-dimensional data in 
 2-dimensional space. 
 ```{r jacc-tsne5}
@@ -228,8 +228,7 @@ jacc.Vis <- addVisualization(jacc.Vis, "tsne",
             perplexity=5, 
             xlab="T1", ylab="T2")
 names(jacc.Vis@view)
-plot(jacc.Vis@view[["tsne"]]$Y, col=jacc.Vis@colv, pch=jacc.Vis@symv,
-     main="t-SNE; Jaccard Distance; perplexity=5")
+plot(jacc.Vis, view = "tsne", main="t-SNE; Jaccard Distance; perplexity=5")
 ```
 
 Optional t-SNE parameters, such as perplexity, can be used to fine-tune 
@@ -238,11 +237,9 @@ to create a new, tuned plot of an existing type overwrites the
 existing plot of that type.
 ```{r jacc-tsne10}
 jacc.Vis <- addVisualization(jacc.Vis, "tsne", 
-            perplexity=10,
-            xlab="T1", ylab="T2")
+            perplexity=10)
 names(jacc.Vis@view)
-plot(jacc.Vis@view[["tsne"]]$Y, col=jacc.Vis@colv, pch=jacc.Vis@symv,
-     main="t-SNE; Jaccard Distance; perplexity=10")
+plot(jacc.Vis, view = "tsne",  main="t-SNE; Jaccard Distance; perplexity=10")
 par(pty="m")
 ```
 
@@ -250,8 +247,7 @@ par(pty="m")
 ```{r jacc-mds1}
 jacc.Vis <- addVisualization(jacc.Vis, "mds")
 names(jacc.Vis@view)
-plot(jacc.Vis@view[["mds"]], col=jacc.Vis@colv, pch=jacc.Vis@symv,
-      main="MDS; Jaccard Distance", xlab="PC1", ylab="PC2")
+plot(jacc.Vis, view = "mds", main="MDS; Jaccard Distance")
 ```
 
 ### iGraph
@@ -280,8 +276,7 @@ J <- jacc.Vis[P]
 J <- addVisualization(J, "tsne", perplexity=5)
 names(J@view)
 par(pty="s")
-plot(J@view[["tsne"]]$Y, col=J@colv, pch=J@symv, main="Down-sampled t-SNE Plot",
-     xlab="T1", ylab="T2")
+plot(J, view = "tsne", main="Down-sampled t-SNE Plot")
 par(pty="m")
 ```
 
@@ -292,16 +287,14 @@ Now we can look at the resulting graph, using three different "layouts".
 set.seed(10967)
 J <- addVisualization(J, "mds")
 J <- addVisualization(J, "graph")
-G <- J@view[["graph"]]
 
-plot(G$graph, layout=G$layouts[["mds"]])
-
-plot(G$graph, layout=G$layouts[["nicely"]], 
+plot(J, view = "graph", layout = "mds")
+plot(J, view = "graph", layout = "nicely", 
      main="Graphical View of Down-sampled Jaccard Distance Matrix",
      xlim=c(-1,1))
 
 
-plot(G$graph, layout=G$layouts[["tsne"]], main="T-SNE Layout")
+plot(J, view = "graph", layout = "tsne", main="T-SNE Layout")
 ```
 
 # Cluster Identities
@@ -329,17 +322,15 @@ Finally, we are going to look at what happens if we use a different distance met
 set.seed(8642)
 sokal.Vis <- Mercator(my.binmat, "sokal", "tsne", K=kk, peplexity = 10)
 table(getClusters(sokal.Vis), getClusters(jacc.Vis))
-plot(sokal.Vis@view[["tsne"]]$Y, col=sokal.Vis@colv, pch=sokal.Vis@symv,
-     main="t-SNE; Sokal-Michener Distance; perplexity=10")
+plot(sokal.Vis, view = "tsne", main="t-SNE; Sokal-Michener Distance; perplexity=10")
 ```
-The two larges groups get assigned the same colors (by chanmce) in the Jacard and the
+The two larges groups get assigned the same colors (by chance) in the Jaccard and the
 Sokal-Michener clusterings. However, it is not at all clear how to align the smaller
 groups. For that purpose, we can use the <tt>remapColors</tt> function.
 ```{r recolored}
 SV <- remapColors(jacc.Vis, sokal.Vis)
 table(getClusters(SV), getClusters(jacc.Vis))
-plot(SV@view[["tsne"]]$Y, col=SV@colv, pch=SV@symv,
-     main="t-SNE; Sokal-Michener Distance; perplexity=10")
+plot(SV, view = "tsne", main="t-SNE; Sokal-Michener Distance; perplexity=10")
 ```
 
 Now colors have been matched (as well as possible) between the two sets of visualizations.
