Fixed NAMESPACE bugs that ultimately track back to graphics::smoothScatter calling a hidden function in grDevices that calls yet another function in KernSmooth.In the process, changed method name from "smoothScatter" to reuse th "scatter" generic from Thresher.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/thresher@152 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/Mercator/NEWS
+++ b/pkg/Mercator/NEWS
@@ -6,7 +6,7 @@
 	**************************************************
 
 
-		CHANGES IN R VERSION 0.9.2
+		CHANGES IN R VERSION 0.9.4
 
 NEW FEATURES
 
@@ -14,7 +14,7 @@ NEW FEATURES
         plots the silhouette widths in the colors already assigned to
         clusters.
 
-    o	Added a new "smoothScatter" method for the Mercator class, which
+    o	Added a new "scatter" method for the Mercator class, which
         displays some views as a smoothed scatter plot.
 
 		CHANGES IN R VERSION 0.9.2
