First draft of `plot2Chrom`, which plots two-sided bar charts for a single chromosome and is intended as a building block to simplify biIdiogram.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/thresher@175 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/RCytoGPS/TODO
+++ b/pkg/RCytoGPS/TODO
@@ -1,1 +1,5 @@
-Everything....
+1. Add an option to suppress labels in `plot1Chrom` so we can use it
+in `makeIdiogram`.
+. Add an option to suppress labels in `plot2Chrom` so we can use it
+in `biIdiogram`.
+
